--- a/Core Java/五.继承.md
+++ b/Core Java/五.继承.md
@@ -1,4 +1,4 @@
-# 五.继承
+# j五.继承
 
 - 继承 定义：基于已有的类构造新类
 - 反射 定义：在程序运行期间发现更多的类以及属性的能力
@@ -191,25 +191,421 @@
 
 ## 5.4 对象包装器和自动装箱
 
+#### 1.自动装箱
+
+- 装箱 定义：基本数据类型变换为基本类型的包装类
+
+  <!--实现-->
+
+  ```java
+  // 装箱
+  public class TestAutoBoxing {
+      public static void main(String[] args) {
+          ArrayList<Integer> list = new ArrayList<Integer>();
+          list.add(5); // 等于 list.add(Integer.valueOf(5));
+      }
+  }/* conclusion
+  1.list中的元素为Integer类型
+  2.当使用.add()方法添加时，被添加的类型为基本类型int
+  3.因此将自动变换为 list.add(Integer.valueOf(5))
+  */
+  ```
+
+- 注意
+
+  - **自动装箱规范要求boolean，byte，char小于等于127，介于-128至127之间的short和int被包装到固定的对象中。**
+
+    原因是：IntegerCache.low 默认是-128；IntegerCache.high默认是127，超出范围的将创建对象存储，不然直接返回值。减少new，减轻jvm压力。
+
+    <!--实现-->
+
+    ```java
+    public class TestAutoBoxing {
+        public static void main(String[] args) {
+    				// 使用包装类
+            Integer a = 127;
+            Integer b = 127;
+            Integer c = 128;
+            Integer d = 128;
+            System.out.println("a == b:"+(a == b));
+            System.out.println("c == d:"+(c == d));
+        }
+    }/* output
+    a == b:true
+    c == d:false
+    */
+    ```
+
+  - 由于包装器类引用可以为null，因此会出现NullPointerException
+
+  - 如果混合使用Integer和Double，Integer会拆箱，提升为double，然后装箱为Double
+
+  - 自动拆箱和自动装箱是编译器认可的，不是虚拟机。
+
+#### 2.自动拆箱
+
+- 拆箱 定义：将包装类数据拆成基本类型数据
+
+  <!--实现-->
+
+  ```java
+  public class TestAutoBoxing {
+      public static void main(String[] args) {
+          // 装箱
+          ArrayList<Integer> list = new ArrayList<Integer>();
+          list.add(5);
+          // 拆箱
+          int intType = list.get(0); // 等于 int intType = list.get(0).intValue();
+      }
+  }/* conclusion
+  1.list中的元素为Integer类型
+  2.当使用.get()方法获取时，获得的值类型为Integer
+  3.因此将自动变换为 int intType = list.get(0).intValue();
+  */
+  ```
+
+## 5.5 参数可变的方法
+
+- 参数可变 定义：支持用可变的参数数量调用的方法
+
+- 格式
+
+  ```java
+  // 使用 ...
+  Double ... args
+  ```
+
+  <!--比如System.out.printf()方法，能够接收多个参数-->
+
+  ```java
+  // 同时接收多个参数
+  System.out.printf("%d %s",n,"name");
+  
+  // 底层实现代码
+  public PrintStream printf(String format, Object ... args) {
+          return format(format, args);
+      }
+  /* conclusion
+  1.“String format”为格式字符串，“Object ... args”为Object对象的数组，因此数量可变
+  */
+  ```
+
+  <!--使用参数可变实现查找最大值-->
+
+  ```java
+  public class TestFindMax {
+      static void findMax(Object ... args){
+          double largest = Double.NEGATIVE_INFINITY;
+          for (Object y: args
+               ) {
+                  Double z = (Double) y;
+                  if (z > largest)
+                      largest = z;
+          }
+          System.out.println(largest);
+      }
+  
+      public static void main(String[] args) {
+          TestFindMax.findMax(3.454,34.3);
+      }
+  }
+  ```
+
+## 5.6 枚举类
+
+- 格式
+
+  ```java
+  enum EnumName{
+  	MAX,MIN,DEDIUM;
+  }
+  ```
+
+- 注意
+
+  - 枚举类中是实例，因此能够创建实例中的变量，但必须使用构造方法赋值
+
+    <!--实现-->
+
+    ```java
+    public class TestEnum {
+         public enum Size{
+            MAX("max",3),MIN("min",1),MEDIUM("medium",2);
+            // 成员变量
+            private String name;
+            private int num;
+            // 成员变量的构造方法
+            Size(String name , int i) {
+                this.name = name;
+                this.num = i;
+            }
+        }
+        public static void main(String[] args) {
+            // 在同一个类中，因此可以访问私有的成员变量name
+            String name = Size.MAX.name;
+            System.out.println(name);
+        }
+    }
+    ```
 
 
+## 5.7 反射——重点
 
+- 反射 定义：支持分析类的能力的程序
 
+- 反射机制：将类中的各个部分封装成其他对象
 
+  原理图
 
+  ![](/Users/toyz/Package/Note/Core Java/五.继承.assets/5.反射机制.jpg)
 
+- **获取Class对象的三种方式**
+  
+  - Class.forName("全类名"):在第一阶段，将字节码文件加载进内存，然后获取Class对象
+  
+    多用于配置文件
+  
+  - 类名.class:在第二阶段，通过类名的class属性
+  
+    多用于参数的传递
+  
+  - 对象.getClass()：在第三阶段，通过Object的getClass方法获取
+  
+    多用于对象的字节码的获取
+  
+    <!--实现-->
+  
+    ```java
+    public class TestReflectionClass {
+        public static void main(String[] args) throws Exception {
+            /*
+            Class对象获取的三种方式
+            1.通过Class.forclass("全类名")获取
+            2.通过类名.class()获取
+            3.通过对象.getClass()方法
+            */
+            // 1.通过Class.forclass("全类名")获取
+            Class cls1 = Class.forName("Five.TestReflection.Person");
+            System.out.println(cls1);
+            // 2.通过类名.class()获取
+            Class cls2 = Person.class;
+            System.out.println(cls2);
+            // 3.通过对象.getClass()方法
+            Person p = new Person();
+            Class cls3 = p.getClass();
+            System.out.println(cls3);
+            // 4.比较三个class引用所指向的是否为同一个Class对象
+            System.out.println("比较三个class引用所指向的是否为同一个Class对象");
+            System.out.println("cls1 == cls2:"+(cls1 == cls2));
+            System.out.println("cls1 == cls2:"+(cls1 == cls3));
+        }
+    }/* output
+    class Five.TestReflection.Person
+    class Five.TestReflection.Person
+    class Five.TestReflection.Person
+    比较三个class引用所指向的是否为同一个Class对象
+    cls1 == cls2:true
+    cls1 == cls2:true
+    */
+    ```
+  
+- 注意
 
+  - **同一个字节码文件（.class）在一次程序运行中只加载一次，所以三种获取Class对象的方式获取到的Class对象都是同一个**
 
+- 用途
+  
+  - 在运行时分析类的能力
+  
+  - 在运行时操作对象
+  
+    <!--举例-->
+  
+    <!--运行过程中，以下出现的方法属于Class类对象中的methods对象中的内容-->
+  
+    ![屏幕快照 2019-08-06 20.40.32](/Users/toyz/Package/Note/Core Java/五.继承.assets/屏幕快照 2019-08-06 20.40.32.png)
+  
+  - 实现通用的数组操作代码
+  
+  - 利用Mehtod对象，类似C++中的函数指针
 
+### 5.7.1 Class类
 
+#### 1.Class对象中的功能
 
+##### 1.1获取成员变量值
 
+<!--可以想象成，Class为一个特殊类，其中Field为成员属性，这个成员属性中存在更加具体的成员属性，并且field这个成员属性能够通过get和set方法来获取和设置值-->
 
+- 规则
 
+  - Field[] getFields()：获取所有的public修饰的成员变量
+  - Field getField()：获取指定的public修饰的成员变量
+  - Field[] getDeclaredFields()：获取所有的成员变量（即使是private修饰，暴力获取）
+  - Field getDeclaredField()：获取指定的成员变量（即使是private修饰，暴力获取）
 
+- 注意
 
+  - **getFields和getDeclaredFields()获取时，getFields能够同时获取到超类和子类中的public变量，getDeclaredFields()只能获取到子类中的所有访问修饰类型的变量**
 
+    <!--实现-->
 
+    ```java
+    // 超类
+    public class Father {
+        // 成员变量
+        private String priFatherName;
+        private int priFatherAge;
+        public String pubFatherName;
+        public int pubFatherAge;
+    }
+    
+    // 子类
+    public class Son extends Father {
+        // 成员变量
+        private String priSonName;
+        private int priSonAge;
+        public String pubSonName;
+        public int pubSonAge;
+    }
+    ```
+
+    ```java
+    // 测试类
+    package Five.TestReflection;
+    
+    import java.lang.reflect.Field;
+    
+    public class TestField {
+        public static void main(String[] args) throws Exception {
+            /*
+            getField和getDeclaredField
+             */
+            // getField
+            System.out.println("--测试getField");
+            Field[] field1 = Son.class.getFields();
+            for (Field f : field1) {
+                System.out.println(f);
+            }
+            // getDeclaredField
+            System.out.println("--测试getDeclaredField");
+            Field[] field2 = Son.class.getDeclaredFields();
+            for (Field f : field2) {
+                System.out.println(f);
+            }}}
+    /* output
+    --测试getField
+    public java.lang.String Five.TestReflection.Son.pubSonName
+    public int Five.TestReflection.Son.pubSonAge
+    public java.lang.String Five.TestReflection.Father.pubFatherName
+    public int Five.TestReflection.Father.pubFatherAge
+    --测试getDeclaredField
+    private java.lang.String Five.TestReflection.Son.priSonName
+    private int Five.TestReflection.Son.priSonAge
+    public java.lang.String Five.TestReflection.Son.pubSonName
+    public int Five.TestReflection.Son.pubSonAge
+    */
+    ```
+
+    
+
+- Field对象方法
+
+  - get([Object](itss://chm/java/lang/Object.html) obj)：返回的 `Field`表示字段的值，指定对象上
+
+  - **set**([Object](itss://chm/java/lang/Object.html) obj, [Object](itss://chm/java/lang/Object.html) value)：设置域为代表的这 `Field`对象指定对象上的参数指定的新价值
+
+  - setAccessible()：**忽略访问修饰符的安全检查，也称为暴力反射**（如果需要get或者set使用private修饰的变量，则需要使用该方法）
+
+    <!--实现-->
+
+    ```java
+    // 超类
+    public class Father {
+        // 成员变量
+        private String priFatherName;
+        private int priFatherAge;
+        public String pubFatherName;
+        public int pubFatherAge;
+    }
+    
+    // 子类
+    public class Son extends Father {
+        // 成员变量
+        private String priSonName;
+        private int priSonAge;
+        public String pubSonName;
+        public int pubSonAge;
+    }
+    ```
+
+    ```java
+    // 测试类
+    package Five.TestReflection;
+    
+    import java.lang.reflect.Field;
+    
+    public class TestField {
+        public static void main(String[] args) throws Exception {
+            /*
+            get和set方法
+             */
+            Son son = new Son();
+            // get,public
+            System.out.println("--测试get方法，使用getField,作用于public修饰对象");
+            Field field3 = Son.class.getField("pubSonName");
+            Object value3 = field3.get(son);
+            System.out.println(value3);
+            // get,private
+            System.out.println("--测试get方法，使用getField,作用于private修饰对象");
+                // 由于getField只能作用于public修饰的成员，因此无法访问
+                // Field field4 = Son.class.getField("priSonName");
+                // field4.setAccessible(true);
+                // Object value4 = field4.get(son);
+                // System.out.println(value4);
+            			 System.out.println("失败");
+            // get,private
+            System.out.println("--测试get方法，使用getDeclaredField,作用于private修饰对象");
+            Field field5 = Son.class.getDeclaredField("priSonName");
+            // 获取前需要忽略访问的安全检查
+            field5.setAccessible(true);
+            Object value5 = field5.get(son);
+            System.out.println(value5);
+            // set,public
+            System.out.println("--测试set方法，使用getField,作用于public修饰对象");
+            Field field6 = Son.class.getField("pubSonName");
+            field6.set(son, "Toyz");
+            Object value6 = field6.get(son);
+            System.out.println(value6);
+            // set,private
+            System.out.println("--测试set方法，使用getDeclaredField,作用于private修饰对象");
+            Field field7 = Son.class.getDeclaredField("priSonName");
+                // 获取前需要忽略访问的安全检查
+                field7.setAccessible(true);
+            Object value7 = field7.get(son);
+            System.out.println("修改前，priSonName:"+value7);
+            field7.set(son, "QQ");
+            value7 = field7.get(son);
+            System.out.println("修改前，priSonName:"+value7);
+    
+        }
+    }
+    /* output
+    --测试get方法，使用getField,作用于public修饰对象
+    null
+    --测试get方法，使用getField,作用于private修饰对象
+    失败
+    --测试get方法，使用getDeclaredField,作用于private修饰对象
+    null
+    --测试set方法，使用getField,作用于public修饰对象
+    Toyz
+    --测试set方法，使用getDeclaredField,作用于private修饰对象
+    修改前，priSonName:null
+    修改前，priSonName:QQ
+    */
+    ```
+
+    
 
 
 
