--- a/Core Java/五.继承.md
+++ b/Core Java/五.继承.md
@@ -1,4 +1,4 @@
-# j五.继承
+# 五.继承
 
 - 继承 定义：基于已有的类构造新类
 - 反射 定义：在程序运行期间发现更多的类以及属性的能力
@@ -439,10 +439,10 @@
 
 - 规则
 
-  - Field[] getFields()：获取所有的public修饰的成员变量
-  - Field getField()：获取指定的public修饰的成员变量
-  - Field[] getDeclaredFields()：获取所有的成员变量（即使是private修饰，暴力获取）
-  - Field getDeclaredField()：获取指定的成员变量（即使是private修饰，暴力获取）
+  - Field[] getFields()：获取所有的public修饰的成员变量（包括超类）
+  - Field getField()：获取指定的public修饰的成员变量（包括超类）
+  - Field[] getDeclaredFields()：获取所有的成员变量（即使是private修饰，暴力反射）
+  - Field getDeclaredField()：获取指定的成员变量（即使是private修饰，暴力反射）
 
 - 注意
 
@@ -515,7 +515,7 @@
 
   - **set**([Object](itss://chm/java/lang/Object.html) obj, [Object](itss://chm/java/lang/Object.html) value)：设置域为代表的这 `Field`对象指定对象上的参数指定的新价值
 
-  - setAccessible()：**忽略访问修饰符的安全检查，也称为暴力反射**（如果需要get或者set使用private修饰的变量，则需要使用该方法）
+  - setAccessible()：**忽略访问修饰符的安全检查，也称为暴力反射**（如果需要get或者set使用private修饰的变量，则需要使用该方法），用于调试，持久存储，相似机制。
 
     <!--实现-->
 
@@ -605,13 +605,350 @@
     */
     ```
 
+##### 1.2 获取构造方法
+
+- 规则
+
+  - getConstructor([类](itss://chm/java/lang/Class.html)<?>... parameterTypes)：获取public修饰的指定构造方法（不含超类）
+
+  - getConstructors()：获取public修饰的所有构造方法（不含超类）
+
+  - getDeclaredConstructor([类](itss://chm/java/lang/Class.html)<?>... parameterTypes)：获取指定构造方法（包括private修饰，暴力反射，不含超类）
+
+  - getDeclaredConstructors()：获取所有构造方法（包括private修饰，暴力反射，不含超类）
+
+    **获取构造方法，无法获得超类，原因是构造方法无法被继承，因此无法获取**
+
+    <!--实现-->
+
+    ```java
+    // 超类
+    public class Father {
+        public Father(String priFatherName , int priFatherAge , String pubFatherName ,
+            int pubFatherAge) {
+            this.priFatherName = priFatherName;
+            this.priFatherAge = priFatherAge;
+            this.pubFatherName = pubFatherName;
+            this.pubFatherAge = pubFatherAge;
+        }
+    
+        public Father() { }
+    
+        private Father(String priFatherName , int priFatherAge){
+            this.priFatherName = priFatherName;
+            this.priFatherAge = priFatherAge;
+        }
+    }
+    
+    // 子类
+    public class Son extends Father {
+        public Son(String priSonName , int priSonAge , String pubSonName , int pubSonAge) {
+            this.priSonName = priSonName;
+            this.priSonAge = priSonAge;
+            this.pubSonName = pubSonName;
+            this.pubSonAge = pubSonAge;
+        }
+    
+        public Son(){}
+    
+        private Son(String priSonName , int priSonAge){
+            this.priSonName = priSonName;
+            this.priSonAge = priSonAge;
+        }
+    }
+    ```
+
+    ```java
+    // 测试类
+    public class TestConstructor {
+        public static void main(String[] args) throws Exception {
+            /*
+            getConstructor和getDeclaredConstructor
+             */
+            // getConstructor,无参构造器和有参构造器
+            System.out.println("--测试getConstructor");
+            Constructor constructor1 = Son.class.getConstructor();
+            System.out.println("无参构造器:"+constructor1);
+            Constructor constructor2 = Son.class.getConstructor(String.class,int.class,String.class,int.class);
+            System.out.println("有参构造器:"+constructor2);
+            // getConstructors
+            System.out.println("--测试getConstructors");
+            Constructor[] constructors3 = Son.class.getConstructors();
+            for (Constructor c : constructors3) {
+                System.out.println(c);
+            }
+            // getDeclaredConstructor
+            System.out.println("--测试getDeclaredConstructor");
+            Constructor constructor4 = Son.class.getDeclaredConstructor(String.class,int.class);
+            System.out.println(constructor4);
+            // getDeclaredConstructors
+            System.out.println("--测试getDeclaredConstructors");
+            Constructor[] constructor5 = Son.class.getDeclaredConstructors();
+            for (Constructor c : constructor5){
+                System.out.println(c);
+            }
+        }
+    }
+    /* output
+    --测试getConstructor
+    无参构造器:public Five.TestReflection.Son()
+    有参构造器:public Five.TestReflection.Son(java.lang.String,int,java.lang.String,int)
+    --测试getConstructors
+    public Five.TestReflection.Son()
+    public Five.TestReflection.Son(java.lang.String,int,java.lang.String,int)
+    --测试getDeclaredConstructor
+    private Five.TestReflection.Son(java.lang.String,int)
+    --测试getDeclaredConstructors
+    private Five.TestReflection.Son(java.lang.String,int)
+    public Five.TestReflection.Son()
+    public Five.TestReflection.Son(java.lang.String,int,java.lang.String,int)
+    */
+    ```
+
     
 
+- Constructor对象方法
 
+  - newInstance([Object](itss://chm/java/lang/Object.html)... initargs)：利用这 `Constructor`对象创建和初始化的构造函数的声明类的一个新实例构造函数，用指定的初始化参数。
 
+    <!--实现-->
 
+    ```java
+    // 测试类
+    public class TestConstructor {
+        public static void main(String[] args) throws Exception {
+            /*
+            newInstance(Object... initargs)
+             */
+            // newInstance(Object... initargs)无参构造器
+            System.out.println("--newInstance(Object... initargs) 无参构造器");
+            Constructor constructor6 = Son.class.getConstructor();
+            System.out.println(constructor6.newInstance());
+            // newInstance(Object... initargs)含参构造器
+            System.out.println("--newInstance(Object... initargs) 含参构造器");
+            Constructor constructor7 = Son.class.getDeclaredConstructor(String.class,int.class);
+            constructor7.setAccessible(true); // 忽略访问的安全检查
+            System.out.println(constructor7.newInstance("Toyz",44));
+        }
+    }
+    /* output
+    --newInstance(Object... initargs) 无参构造器
+    Son{priSonName='null', priSonAge=0, pubSonName='null', pubSonAge=0}
+    --newInstance(Object... initargs) 含参构造器
+    Son{priSonName='Toyz', priSonAge=44, pubSonName='null', pubSonAge=0}
+    */
+    ```
 
+##### 1.3获取方法
 
+- 规则
+
+  - getMethod([String](itss://chm/java/lang/String.html) name, [类](itss://chm/java/lang/Class.html)<?>... parameterTypes)：获取public修饰的指定方法（含超类）
+
+  - getMethods()：获取public修饰的指定方法（含超类）
+
+  - getDeclaredMethod([String](itss://chm/java/lang/String.html) name, [类](itss://chm/java/lang/Class.html)<?>... parameterTypes)：获取指定方法（包括private修饰，暴力反射，不含超类）
+
+  - getDeclaredMethods()：获取所有方法（包括private修饰，暴力反射，不含超类）
+
+    <!--实现-->
+
+    ```java
+    // 超类
+    public class Father {
+        // 方法
+        public void eat(){
+            System.out.println("father eat...");
+        }
+        public void eat(String food){
+            System.out.println("father eat..."+food);
+        }
+        public void edu(){
+            System.out.println("father edu...");
+        };
+        private void run(){
+            System.out.println("father run...");
+        }
+    }
+    
+    // 子类
+    public class Son extends Father {
+        // 方法
+        public void eat(){
+            System.out.println("son eat...");
+        }
+        public void eat(String food){
+            System.out.println("son eat..."+food);
+        }
+        private void run(){
+            System.out.println("son run...");
+        }
+    }
+    ```
+
+    ```java
+    // 测试类
+    public class TestMethod {
+        public static void main(String[] args) throws Exception {
+            /*
+            getMethod和getDeclaredMethod
+            */
+            Son son = new Son();
+            // getMethod,空参方法
+            System.out.println("--测试getMethod,空参方法");
+            Method method1 = Son.class.getMethod("eat");
+            System.out.println(method1);
+            // getMethods,所有方法
+            System.out.println("--测试getMethods");
+            Method[] method2 = Son.class.getMethods();
+            for (Method m : method2) {
+                System.out.println(m);
+            }
+            // getDeclaredMethods，所有方法
+            System.out.println("--测试getDeclaredMethods");
+            Method[] method3 = Son.class.getDeclaredMethods();
+            for (Method m : method3) {
+                System.out.println(m);
+            }}}
+    /* output
+    --测试getMethod,空参方法
+    public void Five.TestReflection.Son.eat()
+    --测试getMethods
+    public java.lang.String Five.TestReflection.Son.toString()
+    public void Five.TestReflection.Son.eat(java.lang.String)
+    public void Five.TestReflection.Son.eat()
+    public void Five.TestReflection.Father.edu()
+    public final native void java.lang.Object.wait(long) throws java.lang.InterruptedException
+    public final void java.lang.Object.wait(long,int) throws java.lang.InterruptedException
+    public final void java.lang.Object.wait() throws java.lang.InterruptedException
+    public boolean java.lang.Object.equals(java.lang.Object)
+    public native int java.lang.Object.hashCode()
+    public final native java.lang.Class java.lang.Object.getClass()
+    public final native void java.lang.Object.notify()
+    public final native void java.lang.Object.notifyAll()
+    --测试getDeclaredMethods
+    private void Five.TestReflection.Son.run()
+    public java.lang.String Five.TestReflection.Son.toString()
+    public void Five.TestReflection.Son.eat(java.lang.String)
+    public void Five.TestReflection.Son.eat()
+    */
+    ```
+
+- Method对象方法
+
+  - invoke([Object](itss://chm/java/lang/Object.html) obj, [Object](itss://chm/java/lang/Object.html)... args)：第一个参数为隐式参数，静态方法时为null。调用底层的方法，这 `方法`对象表示，对指定对象的指定参数。能够调用超类的方法
+
+    <!--实现-->
+
+    ```java
+    // 测试类
+    public class TestMethod {
+        public static void main(String[] args) throws Exception {
+            /*
+            invoke
+            */
+            // invoke,含参子类public方法
+            System.out.println("--测试invoke,含参子类public方法");
+            Method method4 = Son.class.getMethod("eat",String.class);
+            method4.invoke(son, "Fish");
+            // invoke,含参父类public方法
+            System.out.println("--测试invoke,含参父类public方法");
+            Method method5 = Son.class.getMethod("edu");
+            method5.invoke(son);
+            // invoke,无参子类private方法
+            System.out.println("--测试invoke,无参子类private方法");
+            Method method6 = Son.class.getDeclaredMethod("run");
+            method6.setAccessible(true);
+            method6.invoke(son);
+        }
+    }
+    /* output
+    --测试invoke,含参子类public方法
+    son eat...Fish
+    --测试invoke,含参父类public方法
+    father edu...
+    --测试invoke,无参子类private方法
+    son run...
+    */
+    ```
+
+#### 2.Practice（反射）
+
+- 要求：写一个“框架”在不改动代码的前提下，通过配置文件实现创建任意类的对象，执行任意方法
+
+- 步骤
+
+  1. 将需要创建的类和执行的方法写在配置文件中
+  2. 在程序中读取配置文件
+  3. 使用反射将类加载进内存
+  4. 创建对象
+  5. 执行方法
+
+- 实现
+
+  1. 创建类（配置文件需要用到的示范类）
+
+     ```java
+     package Five.TestReflection;
+     public class Father {
+         public Father() { }
+         // 方法
+         public void eat(){
+             System.out.println("father eat...");
+         }
+     }
+     ```
+
+     
+
+  2. 创建配置文件
+
+     ```properties
+     className=Five.TestReflection.Father
+     methodName=eat
+     ```
+
+  3. 读取并执行
+
+     ```java
+     package Five.TestReflection;
+     
+     import java.io.InputStream;
+     import java.lang.reflect.Method;
+     import java.util.Properties;
+     
+     public class TestReflection {
+         public static void main(String[] args) throws Exception {
+             // 1.加载配置文件
+               // 1.1创建pro对象
+               Properties properties = new Properties();
+               // 1.2加载配置文件，转换为集合
+                 // 1.2.1获取配置文件路径
+                 ClassLoader classLoader = TestReflection.class.getClassLoader();
+                 InputStream is = classLoader.getResourceAsStream("pro.properties");
+                 properties.load(is);
+     
+             // 2.获取配置文件中定义的数据
+             String className = properties.getProperty("className");
+             String methodName = properties.getProperty("methodName");
+     
+             // 3.加载类进内存
+             Class cls1 = Class.forName(className);
+     
+             // 4.创建对象-反射
+             Object object = cls1.newInstance();
+     
+             // 5.执行方法-反射
+             Method method1 = cls1.getMethod(methodName);
+             method1.invoke(object);
+         }
+     }
+     /* output
+     father eat...
+     */
+     ```
+
+     
 
 
 
