--- a/Thinking in Java/三.操作符.md
+++ b/Thinking in Java/三.操作符.md
@@ -299,7 +299,13 @@ public class TestPrint {
   - 以上三种只能应用于布尔值
   - 在String值的地方使用布尔值，布尔值会自动转换成适当的文本
 
-
+- 注意
+  - &和&&之间的异同——面试题
+    - 相同
+      1. 都是逻辑与的运算符，运算符两边的表达式结果都为true时，整个运算结果才为true
+    - 不同
+      1. &&具有短路功能，当能够确定一个表达式的值，就不计算余下的部分 <!--(i<2)&&(j<2)&&(k<2)中，如果i<2为false，则将不会继续运算后面的表达式，直接返回false-->
+      2. &可以用作位运算符，详情见3.10的按位操作符
 
 ### 3.8.1 短路
 
