--- a/Thinking in Java/二. 一切都是对象.md
+++ b/Thinking in Java/二. 一切都是对象.md
@@ -57,7 +57,7 @@
 ### 2.2.1 存储位置
 
 2. 栈：栈主要存放在运行期间用到的一些局部变量（基本数据类型的变量）或者是指向其他对象的一些引用，因为方法执行时，被分配的内存就在栈中，所以当然存储的局部变量就在栈中咯。当一段代码或者一个方法调用完毕后，栈中为这段代码所提供的基本数据类型或者对象的引用立即被释放。
-   
+  
 2. 堆：堆主要存放Java在运行过程中new出来的对象，凡是通过new生成的对象都存放在堆中，对于堆中的对象生命周期的管理由Java虚拟机的垃圾回收机制GC进行回收和统一管理。类的非静态成员变量也放在堆区，其中基本数据类型是直接保存值，而复杂类型是保存指向对象的引用，非静态成员变量在类的实例化时开辟空间并且初始化。所以你要知道类的几个时机，加载-连接-初始化-实例化。
 
 3. 常量池：常量池是方法区的一部分内存。常量池在编译期间就将一部分数据存放于该区域，包含基本数据类型如int、long等以final声明的常量值，和String字符串、特别注意的是对于方法运行期位于栈中的局部变量String常量的值可以通过 String.intern()方法将该值置入到常量池中。
@@ -92,18 +92,27 @@
 | void     | -       | -         | -               |    Void    |
 |          |         |           |                 |            |
 
+> 面试题：short s1 = 1 ; s1 = s1 + 1 是否有错？ short s1 = 1; s1 += 1 是否有错
+>
+> 答案：
+>
+> 第一个会报错。原因是，s1 + 1的1是int类型的（32位），因此"s1 + 1"的结果是int类型的，如果赋值给short（16位），就属于强制转换，所以会报错。
+>
+> 第二个不会报错。原因是+=会自动进行强制转换，反编译的结果为s1 = (short) ( s1 + 1 );因此不会报错
+
 3. 高精度数字
+
    - BIgInteger：任意精度的整数
    - BigDecimal：任何精度的定点数 <!--可以用于精确的货币计算-->
-   
-4. 自动装箱和自动拆箱
+
+2. 自动装箱和自动拆箱
 
    - 存储位置
 
      ![](/Users/toyz/Package/Note/Thinking in Java/assets/装箱与拆箱.png)
-   
+
    - 演示
-   
+
      ```java
      public class Main {
          public static void main(String[] args) {
@@ -115,17 +124,17 @@
          }
      }
      ```
-   
+
    - 装箱：自动将基本数据类型转换成包装类，使用Integer.valueOf()方法，超过范围(-128至+128)则新建对象存储
-   
+
      ```java
      public static Integer valueOf(int i) {
      	return  i >= 128 || i < -128 ? new Integer(i) : SMALL_VALUES[i + 128];
      }
      ```
-   
+
    - 拆箱：自动将包装类转换成基本数据类型，使用intValue()方法
-   
+
      ```java
      @Override
      public int intValue() {
