--- a/Thinking in Java/四.控制执行流程.md
+++ b/Thinking in Java/四.控制执行流程.md
@@ -126,8 +126,9 @@
   ```
 
 - 规则
-  - 定义了type类型的变量param，然后将每一个params中的元素赋值给param
-
+  
+- 定义了type类型的变量param，然后将每一个params中的元素赋值给param
+  
 - Test
 
   ```java
@@ -150,8 +151,9 @@
   2. 导致当前方法退出，并返回值；如果是多重循环，能够直接退出整个循环
 
 - 规则
-  - 如果一个方法声明它将返回void之外的内容，必须确保每个代码路径都有返回值
-
+  
+- 如果一个方法声明它将返回void之外的内容，必须确保每个代码路径都有返回值
+  
 - Test
 
   <!--直接退出三层循环-->
@@ -235,8 +237,16 @@
 
 - 规则
 
-  - integral-selector和integral-value的值必须为int或char类型
+  > 面试题：switch能否作用在byte、long、short、string上
+  >
+  > 答案：byte，short可以（因为可以转换成int类型），但是long，String不可以
+
+  - integral-selector和integral-value的值只能为整数表达式或者是枚举常量
+
+    整数表达式可以为int基本类型或者是Integer包装类，由于byte，short，char都能转换为int，因此这些类型以及包装类可以。
+
   - 匹配成功后，如果没有break会继续执行，直到遇到break或者default，因此后续所有值都会输出
+
   -  case 语句块中没有 break 语句时，JVM 并不会顺序输出每一个 case 对应的返回值，而是继续匹配，匹配不成功则返回默认 case
 
 - Test
