--- a/Core Java/九.集合.md
+++ b/Core Java/九.集合.md
@@ -36,7 +36,7 @@
 
   - Java迭代器位于两个元素之间，调用next时，越过下个元素，并返回刚刚越过的元素
 
-    ![](/Users/toyz/Package/Note/Core Java/assets/9.迭代器移动指针.jpg)
+    ![](/Users/space/Documents/Package/Note/Core Java/assets/9.迭代器移动指针.jpg)
     
   - next方法和remove方法互相依赖。使用remove前需要先调用next，因此无法连续调用remove方法删除两个相邻的元素。原因如上
 
@@ -67,9 +67,25 @@
 
 ### 9.2.1 链表
 
+- 结构：双向链表
 
+  - 每个结点存放着数据以及上一结点和下一结点的引用
 
+  - 结构图
 
+    ![](/Users/space/Documents/Package/Note/Core Java/assets/9.2.1链表的结构.png)
+
+- 迭代器定位以及add/remove方法
+
+  - **add方法只依赖迭代器的位置；remove方法依赖迭代器的状态**
+
+     <!--要使用remove方法需要存在被越过的数，也就是需要先使用next或者previous方法-->
+
+  - 原理图
+
+  ![](/Users/space/Documents/Package/Note/Core Java/assets/9.2.1链表迭代器定位.png)
+
+### 9.2.2 数组列表
 
 
 
