--- a/Core Java/五.继承.md
+++ b/Core Java/五.继承.md
@@ -19,7 +19,7 @@
 
 - 图解
 
-![](/Users/toyz/Package/Note/Core Java/assets/5.方法调用流程.png)
+  ![](/Users/space/Documents/Package/Note/Core Java/assets/5.方法调用流程.png)
 
 ### 5.1.7 阻止继承：final类和方法
 
@@ -357,7 +357,7 @@
 
   原理图
 
-  ![](/Users/toyz/Package/Note/Core Java/五.继承.assets/5.反射机制.jpg)
+  ![](/Users/space/Documents/Package/Note/Core Java/assets/5.反射机制.jpg)
 
 - **获取Class对象的三种方式**
   
@@ -423,7 +423,7 @@
   
     <!--运行过程中，以下出现的方法属于Class类对象中的methods对象中的内容-->
   
-    ![屏幕快照 2019-08-06 20.40.32](/Users/toyz/Package/Note/Core Java/五.继承.assets/屏幕快照 2019-08-06 20.40.32.png)
+    ![](/Users/space/Documents/Package/Note/Core Java/assets/屏幕快照 2019-08-06 20.40.32.png)
   
   - 实现通用的数组操作代码
   
